# research-and-development

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Jenkinsfile  LICENSE  README.md  TestPush.py  add_ssh_key.bat  agg_prototype.py  alternative_itl.py  carry_forward_debug.py  cdp_test_db_gz.py  check_pg_mappers.py  clipping_filters.py  conftest.py  count_codes_prototype.py  create_schema.py  environment.yml  export_main.py  export_mods_main.py  hdfs.py  join_pg_prototype.py  main.py  make_dirs_main.py  many_to_one_checker_prototype.py  mypy.ini  null_test.py  output.pstats  pc_lenths_prototype.py  pg_alpha_num.py  postcode_reducer_main.py  previous-environment.yml  prototype_intram_by_itl1.py  pyproject.toml  pytest.ini  reg_apport_prototype.py  regression_apportionment.py  regression_estimation.py  regression_test_helper.py  (+10 more)
.github/: pull_request_template.md
config/: DataSchema.toml  Data_Schema.toml  all_data_construction_schema.toml  backdata_schema.toml  cellno_2022_schema.toml  civil_defence_detailed_schema.toml  construction_ni_schema.toml  construction_ni_schema_updated.toml  construction_schema.toml  contributors_schema.toml  cora_schema.toml  data_schema.toml  descriptions.txt  frozen_data_staged_schema.toml  itl1_detailed_schema.toml  itl_schema.toml  long_response.toml  manual_outliers_schema.toml  manual_trim_schema.toml  manual_trimming_schema.toml  ni_full_responses.toml  ni_indicative_schema.toml  ni_responses_schema.toml  pg_alpha_num_schema.toml  pg_detailed_schema.toml  pg_num_alpha_schema.toml  postcode_construction_schema.toml  ref_list_817_schema.toml  reference_list_schema.toml  responses_schema.toml  shortform_outputs_schema.toml  sic_division_detailed_schema.toml  sic_pg_alpha_schema.toml  sic_pg_num_schema.toml  sic_pg_utf_schema.toml  subresponder_schema.toml  ultfoc_schema.toml  userconfig.toml  wide_resonses.toml  wide_responses.toml
cov_reports/: update_readme.py
docs/: README.md  conf.py
helpers/: check_pg_mappers.py  create_schema.py  postcode_reduction_helper.py  regression_apportionment.py  regression_estimation.py  regression_imputation.py  regression_test_helper.py  reverse_staging.py  sic_pg_extract.py  synthetic.py  trial_back_imp.py  unit_test_helper.py
logs/: logs.md
notebooks/: Schema_maker.ipynb  regression_tester.ipynb  scripting_env_converter.ipynb
src/: config.yaml  conftest.py  data_schema.py  dev_config.yaml  dev_config_schema.yaml  developer_config.yaml  dummyfuncs.py  main.py  pipeline.py  user_config.yaml  user_config_schema.yaml  (+1 more)
(+347 files in other folders)
