# `poetry` configurations
[tool.poetry]
name = "resdev36"
version = "0.1.0"
description = "Research and Development project: Calculating statistics for national and regional research and development expenditure"
authors = ["Roddy Macrae Roddy.Macrae@ext.ons.gov.uk"]

[tool.poetry.dependencies]
python = "3.6.2"
numpy = "1.15.2"

[[tool.poetry.source]]
name = "ONS"
url = "http://art-p-01/artifactory/api/pypi/pypi-virtual/simple"
default = true

#[tool.poetry.dev-dependencies]
#pytest = "7.2.1"
